Layout and UI bootstrap added

--- a/src/views/layout.slim
+++ b/src/views/layout.slim
@@ -1,6 +1,9 @@
 html
   head
-
+    script type="text/javascript" src="./js/bootstrap.min.js"
+    script type="text/javascript" src="./js/bootstrap.bundle.min.js"
+    link rel="stylesheet" href="./assets/css/bootstrap.css"
   body
     == slim :header
     ==yield
+    == slim :footer
