--- a/src/views/header.slim
+++ b/src/views/header.slim
@@ -1,1 +1,4 @@
-h2 Header
+nav class="navbar navbar-light bg-light"
+  a class="navbar-brand" href="#"
+    img src="./assets/img/av.png" width="30" height="30" class="d-inline-block align-top" alt=""
+    | ARUN VIGNESH
