--- a/blogger/src/views/header.slim
+++ b/blogger/src/views/header.slim
@@ -4,9 +4,9 @@ nav.header.navbar.fixed-top
       img src="/assets/img/av.svg" width="30" height="30" class="d-inline-block align-top" alt=""
       span ARUN VIGNESH
     div.float-right.header-menu
-      a href="/about" About
+      a href="/search" Search
       a href="/" Blogs
-      a href="/events" Events
+      a href="/about" About
     div.float-right.side-bar-menu
       a#menu-btn.btn
         div
