--- a/blogger/src/frontend/style/main.scss
+++ b/blogger/src/frontend/style/main.scss
@@ -1,4 +1,5 @@
 @import "./bootstrap-scss/bootstrap";
+@import "./hamburger/hamburger";
 @import "./screen_size";
 @import "./header";
 @import "./footer";
